altra modifica dei toast. da controllare alcuni toast tipo quello delle giornate che vanno in loop. forse ho modificato la logica di alcune cose e si salvano giorni con lo stesso nome. modificati i tasti in creascheda e mo c'è il tasto salva invece del back, nel backend ho disattivato il dismiss degli alert dialog. un po' di modifiche anche nella pagina degli esercizi e compagnia. Modificato il layout di alcune cose tra le varie pagine. aggiunto una nuova funzione "Check fisico" da implementare (ho provato almeno a far partire il dialog con scarsi risultati) vabbe poi ci sono alcune cose da sistemare che penso di ricordami mentre uso l'app.

--- a/app/src/main/res/drawable/drawable_botton_grigio.xml
+++ b/app/src/main/res/drawable/drawable_botton_grigio.xml
@@ -7,7 +7,7 @@
                 android:radius="10dp">
             </corners>
             <solid
-                android:color="@color/grigio">
+                android:color="@color/pantone">
             </solid>
 
         </shape>
