--- a/app/src/main/res/layout/crea_esercizio.xml
+++ b/app/src/main/res/layout/crea_esercizio.xml
@@ -26,18 +26,27 @@
             android:gravity="center"
             android:layout_marginBottom="10dp"
             >
-            <TextView
+
+
+            <ImageView
                 android:layout_width="0dp"
+                android:layout_height="40dp"
                 android:layout_weight="0.1"
-                android:layout_height="wrap_content"
-                android:text=""
-                ></TextView>
+                android:adjustViewBounds="true"
+                android:scaleType="centerCrop"
+                android:layout_gravity="center_vertical">
+
+            </ImageView>
 
             <EditText
                 android:id="@+id/nomeEsercizio"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="0.5"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginBottom="10dp"
                 android:background="@drawable/drawable_botton_grigio"
                 android:hint="Nome Esercizio"
                 android:padding="6dp"
@@ -53,7 +62,8 @@
                 android:adjustViewBounds="true"
                 android:layout_weight="0.1"
                 android:layout_marginLeft="10dp"
-                android:layout_height="40dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
                 android:background="@drawable/drawable_botton_white"
                 android:src="@drawable/noimg"
                 >
@@ -81,6 +91,7 @@
                 android:layout_height="40dp"
                 android:textSize="15dp"
                 android:layout_weight="0.5"
+                android:layout_gravity="center_horizontal"
                 android:layout_marginRight="10dp"
                 android:layout_marginLeft="10dp"
                 android:background="@drawable/drawable_botton_grigio"
@@ -285,6 +296,46 @@
                 android:text=""></TextView>
         </LinearLayout>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center"
+            android:layout_marginBottom="30dp"
+            >
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="20dp"
+                android:layout_marginLeft="20dp"
+                android:layout_weight="0.175"
+                android:gravity="left"
+                android:text=""></TextView>
+
+            <EditText
+                android:id="@+id/pesoKG"
+                android:layout_width="0dp"
+                android:layout_weight="1.7"
+                android:gravity="center"
+                android:textAlignment="center"
+                android:textSize="18dp"
+                android:hint="Peso utilizzato"
+                android:layout_height="wrap_content"
+                android:background="@drawable/drawable_scheda"
+                android:padding="6dp"
+
+                >
+            </EditText>
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="20dp"
+                android:layout_marginLeft="20dp"
+                android:layout_weight="0.175"
+                android:gravity="left"
+                android:text=""></TextView>
+        </LinearLayout>
+
     </LinearLayout>
 </ScrollView>
 
@@ -300,6 +351,7 @@
             android:layout_width="0dp"
             android:layout_weight="0.1"
             android:layout_height="40dp"
+            android:layout_gravity="center_vertical"
             android:background="@drawable/ic_baseline_home_24"
             android:contentDescription="Cancella Tutto"
             >
@@ -312,6 +364,7 @@
             android:layout_marginBottom="10dp"
             android:layout_marginTop="10dp"
             android:text="Salva"
+            android:layout_gravity="center_vertical"
             android:textColor="@color/black"
             android:textSize="20dp"
             android:layout_marginRight="20dp"
@@ -325,10 +378,10 @@
             android:id="@+id/backEsercizio"
             android:layout_width="0dp"
             android:layout_weight="0.1"
+            android:layout_gravity="center_vertical"
             android:layout_height="40dp"
             android:layout_marginBottom="10dp"
             android:layout_marginTop="10dp"
-            android:layout_gravity="center"
             android:background="@drawable/ic_baseline_keyboard_backspace_24"
 
             >
