--- a/app/src/main/res/layout/crea_giorno.xml
+++ b/app/src/main/res/layout/crea_giorno.xml
@@ -22,12 +22,16 @@
         android:layout_marginBottom="10dp"
         >
 
-        <TextView
+        <ImageView
             android:layout_width="0dp"
+            android:layout_height="40dp"
             android:layout_weight="0.1"
-            android:layout_height="wrap_content"
-            android:text=""
-            ></TextView>
+            android:adjustViewBounds="true"
+            android:layout_gravity="center_vertical"
+            android:scaleType="centerCrop"
+            >
+
+        </ImageView>
 
         <EditText
             android:id="@+id/nomeGiorno"
@@ -35,6 +39,10 @@
             android:textSize="24dp"
             android:textAlignment="center"
             android:layout_weight="0.5"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginBottom="10dp"
             android:layout_height="wrap_content"
             android:background="@drawable/drawable_botton_grigio"
             android:hint="Nome Giorno"
@@ -47,6 +55,7 @@
             android:layout_weight="0.1"
             android:text="save"
             android:layout_marginLeft="3dp"
+            android:layout_gravity="center_vertical"
             android:background="@drawable/drawable_scheda"
             android:layout_height="wrap_content"
             >
@@ -110,6 +119,7 @@
             android:layout_width="0dp"
             android:layout_weight="0.1"
             android:layout_height="40dp"
+            android:layout_gravity="center_vertical"
             android:background="@drawable/ic_baseline_home_24"
             android:contentDescription="Cancella Tutto"
             >
@@ -124,6 +134,7 @@
             android:textColor="@color/black"
             android:background="@drawable/drawable_scheda"
             android:onClick="AggiungiGiorno"
+            android:layout_gravity="center_vertical"
             android:layout_marginRight="20dp"
             android:layout_marginLeft="20dp"
             android:layout_marginBottom="10dp"
@@ -134,10 +145,10 @@
             android:id="@+id/backGiorno"
             android:layout_width="0dp"
             android:layout_weight="0.1"
+            android:layout_gravity="center_vertical"
             android:layout_height="40dp"
             android:layout_marginBottom="10dp"
             android:layout_marginTop="10dp"
-            android:layout_gravity="center"
             android:background="@drawable/ic_baseline_keyboard_backspace_24"
 
             >
