--- a/app/src/main/res/layout/crea_scheda.xml
+++ b/app/src/main/res/layout/crea_scheda.xml
@@ -21,18 +21,26 @@
             android:gravity="center"
             android:layout_marginBottom="10dp"
             >
-            <TextView
+            <ImageView
                 android:layout_width="0dp"
+                android:layout_height="40dp"
                 android:layout_weight="0.1"
-                android:layout_height="0dp"
-                android:text=""
-                ></TextView>
+                android:adjustViewBounds="true"
+                android:scaleType="centerCrop"
+             >
+
+            </ImageView>
+
 
             <EditText
                 android:id="@+id/nomeScheda"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="0.5"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginBottom="10dp"
                 android:background="@drawable/drawable_botton_grigio"
                 android:hint="Nome Scheda"
                 android:padding="6dp"
@@ -48,7 +56,8 @@
                 android:adjustViewBounds="true"
                 android:layout_weight="0.1"
                 android:layout_marginLeft="10dp"
-                android:layout_height="40dp"
+                android:layout_gravity="center_vertical"
+                android:layout_height="wrap_content"
                 android:background="@drawable/drawable_botton_white"
                 android:src="@drawable/noimg"
                 ></ImageButton>
@@ -117,6 +126,7 @@
             android:onClick="ChiudTuttoNonSalva"
             android:layout_width="0dp"
             android:layout_weight="0.1"
+            android:layout_gravity="center_vertical"
             android:layout_height="40dp"
             android:background="@drawable/ic_baseline_home_24"
             android:contentDescription="Cancella Tutto"
@@ -125,6 +135,7 @@
 
         <Button
             android:id="@+id/CreaGiorno"
+            android:onClick="AggiungiGiorno"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
@@ -132,8 +143,8 @@
             android:layout_marginRight="20dp"
             android:layout_marginBottom="10dp"
             android:layout_weight="0.5"
+            android:layout_gravity="center_vertical"
             android:background="@drawable/drawable_scheda"
-            android:onClick="AggiungiGiorno"
             android:text="Nuovo Giorno"
             android:textColor="@color/black"
             android:textSize="20dp"></Button>
@@ -141,12 +152,12 @@
         <Button
             android:id="@+id/backScheda"
             android:layout_width="0dp"
-            android:layout_height="40dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
             android:layout_weight="0.1"
-            android:background="@drawable/ic_baseline_keyboard_backspace_24"
-            android:textColor="@color/black"
+            android:text="save"
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="3dp"
+            android:background="@drawable/drawable_scheda"
+            android:layout_height="wrap_content"
 
             ></Button>
 
