--- a/app/src/main/res/layout/item_esercizi.xml
+++ b/app/src/main/res/layout/item_esercizi.xml
@@ -5,35 +5,44 @@
     android:orientation="horizontal"
     android:padding="20dp"
    >
-    <TextView
+    <ImageView
+        android:id="@+id/immagineEsercizi"
+        android:scaleType="centerCrop"
+        android:adjustViewBounds="true"
         android:layout_width="0dp"
-        android:layout_weight="0.1"
         android:layout_height="wrap_content"
-        android:text=""
-        ></TextView>
+        android:layout_gravity="center_vertical"
+        android:layout_weight="0.1"
+        android:layout_marginRight="20dp"
+        android:src="@drawable/noimg"
+        android:onClick="OnImmagineClick"
+        >
+
+    </ImageView>
     <Button
         android:id="@+id/visualizzaEsercizi"
+        android:onClick="OnSchedaClick"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="Esercizio"
         android:textColor="@color/black"
         android:textSize="18dp"
-        android:onClick="OnSchedaClick"
+        android:layout_gravity="center_vertical"
+        android:padding="10dp"
         android:layout_weight="0.5"
-        android:layout_marginRight="10dp"
         android:background="@drawable/drawable_scheda"
         >
     </Button>
+
     <Button
         android:id="@+id/deleteEsercizi"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:onClick="OnDeleteExPerGiornoClick"
+        android:layout_gravity="center_vertical"
+        android:layout_marginLeft="10dp"
         android:layout_weight="0.1"
-        android:layout_marginRight="10dp"
         android:background="@drawable/ic_baseline_close_24"
-        >
-    </Button>
+        android:onClick="OnDeleteExPerGiornoClick"></Button>
 
 
 </LinearLayout>
