--- a/app/src/main/res/layout/schede_pag3.xml
+++ b/app/src/main/res/layout/schede_pag3.xml
@@ -16,46 +16,83 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_margin="10dp"
+
 
         >
         <ImageView
             android:layout_width="0dp"
             android:layout_height="50dp"
-            android:layout_weight="0.3"
+            android:layout_weight="0.1"
             android:layout_marginTop="5dp"
+            android:layout_gravity="center_vertical"
             android:src="@drawable/edit"
-            android:background="@drawable/drawable_botton_grigio"
+            android:background="@drawable/drawable_botton_white"
             android:onClick="EditUtente"
             >
         </ImageView>
 
-        <TextView
-            android:id="@+id/nomeUtente"
+        <ImageView
             android:layout_width="0dp"
+            android:layout_weight="0.5"
             android:layout_height="wrap_content"
-            android:layout_marginStart="5dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginEnd="5dp"
-            android:layout_marginBottom="5dp"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:text=""
-            android:textColor="@color/white"
-            android:textSize="30dp"></TextView>
+            android:layout_gravity="center"
+            android:adjustViewBounds="true"
+            android:scaleType="centerCrop"
+            android:src="@drawable/adesivo">
+
+        </ImageView>
 
         <ImageView
             android:layout_width="0dp"
             android:layout_height="50dp"
-            android:layout_weight="0.3"
+            android:layout_weight="0.1"
             android:layout_marginTop="5dp"
             android:onClick="SeeUtente"
-            android:background="@drawable/drawable_botton_grigio"
+            android:layout_gravity="center_vertical"
+            android:background="@drawable/drawable_botton_white"
             android:src="@drawable/ic_baseline_info_24"
             >
         </ImageView>
 
     </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+
+            >
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="5dp"
+                android:padding="5dp"
+                android:layout_weight="0.5"
+                android:gravity="center"
+                android:text="Buon allenamento!"
+                android:textColor="@color/white"
+                android:textSize="25dp"></TextView>
+
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+
+            >
+            <TextView
+                android:id="@+id/nomeUtente"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="5dp"
+                android:padding="5dp"
+                android:layout_marginBottom="10dp"
+                android:layout_weight="0.5"
+                android:gravity="center"
+                android:text=""
+                android:textColor="@color/white"
+                android:textSize="25dp"></TextView>
+
+        </LinearLayout>
 
 
     <ListView
@@ -63,23 +100,44 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginBottom="70dp"
+        android:padding="4dp"
         >
     </ListView>
 
     </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_alignParentBottom="true"
+        android:gravity="center"
+        >
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.1"></TextView>
+
     <Button
         android:id="@+id/creaScheda"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Nuova Scheda"
         android:onClick="CreaScheda"
-        android:minWidth="100dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginBottom="20dp"
+        android:layout_weight="0.5"
         android:background="@drawable/drawable_scheda"
-        android:layout_marginBottom="30dp"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:textSize="20dp"
-        android:padding="10dp"
-        >
+        android:text="Nuova Scheda"
+        android:textColor="@color/black"
+        android:textSize="20dp">
     </Button>
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.1"></TextView>
+
+    </LinearLayout>
 </RelativeLayout>
